<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addAlbumsMenuItem"
        android:icon="@drawable/add"
        android:title="@string/add"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/settingsAlbumsMenuItem"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/aboutAlbumsMenuItem"
        android:title="@string/about" />

    <item
        android:id="@+id/deleteAlbumsMenuItem"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/renameAlbumMenuItem"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/rename_album"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/searchAlbumsMenuItem"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
</menu>