...
            android:id="@+id/usernameRegisterLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameRegister"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableStart="@drawable/username"
                android:drawablePadding="5dp"
                android:hint="@string/username" />
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordRegister"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableStart="@drawable/password"
                android:drawablePadding="5dp"
                android:hint="@string/password"
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordRegister"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableStart="@drawable/confirm_password"
                android:drawablePadding="5dp"
                android:hint="@string/confirm_password"
...
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:drawableStart="@drawable/first_name"
                    android:drawablePadding="5dp"
                    android:hint="@string/first_name" />
...
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameRegister"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:drawableStart="@drawable/last_name"
                    android:drawablePadding="5dp"
                    android:hint="@string/last_name" />
...
            android:id="@+id/birthDateRegisterLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birthDateRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableStart="@drawable/bith_date"
                android:drawablePadding="5dp"
                android:hint="@string/bith_date" />
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/registerButtonRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/register" />
        </LinearLayout>
...
